fix positioning and spacing; add font-sizes and colors

--- a/newbie_solutions/qr-_code_component/styles.css
+++ b/newbie_solutions/qr-_code_component/styles.css
@@ -11,8 +11,8 @@
 }
 
 * {
-    outline: 1px solid red;
-
+/*     outline: 1px solid red;
+ */
 }
 
 body {
@@ -38,18 +38,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     background-color: var(--color-white);
     border-radius: 20px;
-    height: 600px;
+    height: 650px;
     width: 400px;
 }
 
 .qr-container img {
     max-height: 100%;
     max-width: 100%;
-    object-fit: cover;
     border-radius: 12px;
 }
 
@@ -58,12 +56,26 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .text-title, .text-paragraph {
     text-align: center;
     width: 100%;
+    margin: 0;padding: 0;
+
+}
+
+.text-title {
+    color: var(--color-dark-blue);
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+.text-paragraph {
+    color: var(--color-grayish-blue);
+    font-size: 1.4rem;
+    width: 90%;
 }
 
 /* <img src="./images/image-qr-code.png" alt="qr-code">
